feat(setup): configure code quality tools
- Configure ESLint with TypeScript and strict rules
- Set up Prettier with consistent formatting rules
- Add .prettierignore for build artifacts
- Create .editorconfig for IDE consistency
- Install and configure husky pre-commit hooks
- Pre-commit runs lint, format check, and build
- Update to ESLint v8 for .eslintrc support

Task: 1.1.3 ✅

--- a/functions/package.json
+++ b/functions/package.json
@@ -14,8 +14,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "lint": "eslint src --ext .ts",
-    "lint:fix": "eslint src --ext .ts --fix",
+    "lint": "eslint --config .eslintrc.js src --ext .ts",
+    "lint:fix": "eslint --config .eslintrc.js src --ext .ts --fix",
     "format": "prettier --write \"src/**/*.ts\"",
     "format:check": "prettier --check \"src/**/*.ts\"",
     "precommit": "npm run lint && npm run format:check && npm run test"
@@ -43,7 +43,7 @@
     "@types/node": "^24.0.8",
     "@typescript-eslint/eslint-plugin": "^8.35.1",
     "@typescript-eslint/parser": "^8.35.1",
-    "eslint": "^9.30.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.5.1",
     "firebase-functions-test": "^3.4.1",
