feat(setup): configure separate dev/prod Firebase projects
- Update .firebaserc with development and production projects
- Create separate environment setup scripts for dev/prod
- Add deployment scripts to package.json
- Update config module to detect environment
- Enhance documentation with deployment instructions
- Default to development environment for safety

Development project: mmk-currency-bot-dev
Production project: mmk-currency-bot

Task: 1.1.4 ✅

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,7 @@
 {
   "projects": {
-    "default": "mmk-currency-bot"
+    "default": "mmk-currency-bot-dev",
+    "production": "mmk-currency-bot",
+    "development": "mmk-currency-bot-dev"
   }
 }
