docs: add solo developer workflow optimizations
- Create comprehensive solo dev setup guide
- Add shortcuts and time-saving workflows
- Update CI to run on direct master pushes
- Add notes about future team scaling
- Reference solo guide in main docs

Solo dev features:
- Direct push to master with quality checks
- Simplified deployment commands
- Skip CI option for emergencies
- No PR reviews required
- Keep infrastructure ready for team growth

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,5 +1,8 @@
 # CODEOWNERS for MMK Currency Bot
 # This file defines who is responsible for code reviews
+# 
+# NOTE: Currently a solo project. This file is kept for future team growth.
+# When working alone, you can bypass review requirements.
 
 # Default owners for everything
 * @KyawPh
