--- a/functions/package.json
+++ b/functions/package.json
@@ -23,7 +23,7 @@
     "precommit": "npm run lint && npm run format:check && npm run test"
   },
   "engines": {
-    "node": ">=18"
+    "node": "18"
   },
   "keywords": [
     "firebase",
