--- a/functions/package.json
+++ b/functions/package.json
@@ -37,6 +37,8 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
+    "@types/axios": "^0.9.36",
+    "axios": "^1.10.0",
     "firebase-admin": "^13.4.0",
     "firebase-functions": "^6.3.2"
   },
